--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-preview": "vite build --base=/vue3-waterfall-plugin/preview",
     "serve": "vite preview"
   },
   "dependencies": {
