--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.1.2",
+  "version": "2.1.3",
   "name": "vue-waterfall-plugin-next",
   "author": "Yaowen Liu <576079353@qq.com>",
   "license": "UNLICENSED",
@@ -29,8 +29,7 @@
   "dependencies": {
     "@vueuse/core": "^8.1.1",
     "element-plus": "^2.1.4",
-    "vue": "^3.2.16",
-    "vue-waterfall-plugin-next": "^2.1.2"
+    "vue": "^3.2.16"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
