--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@vueuse/core": "^8.1.1",
     "element-plus": "^2.1.4",
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vue-waterfall-plugin-next": "^2.1.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
