--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.1.3",
+  "version": "2.1.4",
   "name": "vue-waterfall-plugin-next",
   "author": "Yaowen Liu <576079353@qq.com>",
   "license": "UNLICENSED",
@@ -28,9 +28,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.1.1",
+    "animate.css": "^4.1.1",
     "element-plus": "^2.1.4",
     "vue": "^3.2.16",
-    "vue-waterfall-plugin-next": "^2.1.3"
+    "vue-waterfall-plugin-next": "^2.1.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
