--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-waterfall-plugin-next",
-  "version": "2.1.7",
+  "version": "2.1.8",
   "license": "UNLICENSED",
   "author": "Yaowen Liu <576079353@qq.com>",
   "main": "./dist/my-lib.umd.js",
@@ -27,16 +27,15 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "^8.1.1",
     "animate.css": "^4.1.1",
-    "element-plus": "^2.1.4",
-    "vue": "^3.2.16"
+    "element-plus": "^2.1.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.21",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vueuse/core": "^8.1.1",
     "autoprefix": "^1.0.1",
     "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
@@ -46,6 +45,7 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vitest": "^0.6.0",
+    "vue": "^3.2.16",
     "vue-tsc": "^0.33.2-patch.1"
   },
   "eslintConfig": {
