--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "element-plus": "^2.1.4",
+    "vue-router": "4",
     "vue-waterfall-plugin-next": "2.2.0"
   },
   "devDependencies": {
