--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "outDir": "dist",
     "declaration": true
   },
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules", "example"]
 }
