fixed: 修复因为打包时类型错误，导致缺少types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@/*": ["src/*"]
     },
     "outDir": "dist",
-    "declaration": true
+    "declaration": false
   },
   "exclude": ["dist", "node_modules", "example"]
 }
