--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-waterfall-plugin-next",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "license": "UNLICENSED",
   "author": "Yaowen Liu <576079353@qq.com>",
   "main": "dist/my-lib.umd.js",
@@ -20,8 +20,7 @@
   "dependencies": {
     "animate.css": "4.1.1",
     "element-plus": "2.1.4",
-    "vue-router": "4",
-    "vue-waterfall-plugin-next": "2.2.4"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.18.8",
