--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-waterfall-plugin-next",
-  "version": "2.4.2",
+  "version": "2.4.3",
   "license": "UNLICENSED",
   "author": "Yaowen Liu <576079353@qq.com>",
   "main": "dist/my-lib.umd.js",
@@ -20,7 +20,8 @@
   "dependencies": {
     "animate.css": "4.1.1",
     "element-plus": "2.1.4",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue-waterfall-plugin-next": "2.4.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.18.8",
