--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-waterfall-plugin-next",
-  "version": "2.5.5",
+  "version": "2.5.6",
   "license": "UNLICENSED",
   "author": "Yaowen Liu <576079353@qq.com>",
   "main": "dist/my-lib.umd.js",
@@ -18,6 +18,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "vue-waterfall-plugin-next": "^2.5.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.18.8",
