--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.18.8",
+    "@better-scroll/core": "^2.5.1",
+    "@better-scroll/mouse-wheel": "^2.5.1",
+    "@better-scroll/observe-dom": "^2.5.1",
+    "@better-scroll/pull-up": "^2.5.1",
+    "@better-scroll/scroll-bar": "^2.5.1",
     "@types/lodash-es": "4.17.6",
     "@types/node": "17.0.21",
     "@vitejs/plugin-vue": "1.9.3",
